Ahora, cuando el mouse pasa sobre una de las barras de un splitted, este cambia de forma para indicar que un resize es posible. Fixeado un bug de renderizado que hace que si draggea muy rapido, el mouse cambia a su forma original, confundiendo al usuario. (issue #56)

--- a/src/resources/css/splitted.css
+++ b/src/resources/css/splitted.css
@@ -56,6 +56,8 @@
    float: left;
    background-color: #000000;
    overflow: hidden;
+   cursor: ew-resize;
+   z-index: 999;
 }
 
 /*
@@ -108,6 +110,8 @@
    float: left;
    background-color: #000000;
    overflow: hidden;
+   cursor: ns-resize;
+   z-index: 999;
 }
 
 /*
