Fixed una caso corner del Splitted. Bajo ciertas condiciones el div bottom de un splitted (top-bottom) hacia que los ultimos pixels (en el eje y) no se dibujaran debido a que el espacio era ocupado por el alto (height) de la barra que splitteaba. Este efecto no se ve en el splitted cuando es left-right. El fix (experimental) es usar el display flex y la expansion automatica. Extendido tambien el script start.sh para que lanze el notifier.

--- a/src/resources/css/splitted.css
+++ b/src/resources/css/splitted.css
@@ -92,8 +92,9 @@
 .bottom_side_panel_and_bar_of_splitted {
    height: 70%;
    width: 100%;
-   display: inline-block;
+   display: flex;
    float: left;
+   flex-flow: column;
 }
 
 .bottom_panel_of_splitted {
