--- a/src/resources/css/stacked.css
+++ b/src/resources/css/stacked.css
@@ -56,6 +56,7 @@
    overflow: hidden;
    display: flex;
    flex-flow: column;
+   border: 0px;
 }
 .horizontal_stacked_container {
    min-width: 10px;
@@ -64,5 +65,6 @@
    overflow: hidden;
    display: flex;
    flex-flow: row;
+   border: 0px;
 }
 
