--- a/src/resources/css/context.standalone.css
+++ b/src/resources/css/context.standalone.css
@@ -9,8 +9,8 @@
 	/*font-size: 11px;*/
 	font-weight: bold;
 	/*line-height: 20px;
-	color: #999;*/
-	text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
+	color: #999;
+	text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);*/
 }
 .dropdown-menu {
 	position: absolute;
