--- a/src/resources/css/splitted.css
+++ b/src/resources/css/splitted.css
@@ -1,3 +1,9 @@
+/* The bar of a Splitted should be transparent */
+.bar_of_splitted_transparent {
+  background: transparent !important;
+  border: 1px solid transparent !important;
+}
+
 
 /* 
  * Vertical split
