--- a/src/resources/css/jstree-themes/default-dark/style.css
+++ b/src/resources/css/jstree-themes/default-dark/style.css
@@ -1031,7 +1031,7 @@
 }
 
 .jstree-default-dark .jstree-anchor {
-  color: #999;
+  /*color: #999;*/                                      /* disabled, use the default */
   text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.5);
 }
 .jstree-default-dark .jstree-clicked,
