--- a/src/resources/css/theme/uidark/jquery-ui.theme.css
+++ b/src/resources/css/theme/uidark/jquery-ui.theme.css
@@ -35,7 +35,7 @@
 }
 .ui-widget-content {
 	border: 1px solid #666666;
-	background: #000000;
+	background: #0E0E0E;
 	color: #ffffff;
 }
 .ui-widget-content a {
