--- a/src/resources/css/processView.css
+++ b/src/resources/css/processView.css
@@ -21,4 +21,24 @@ div.tooltip {
     pointer-events: none;
 }
 
+.compass{
+  	fill:			#fff;
+  	stroke:			#000;
+  	stroke-width:	1.5;
+}
 
+.button{
+	fill:           	#225EA8;
+	stroke:   			#0C2C84;
+	stroke-miterlimit:	6;
+	stroke-linecap:		round;
+}
+
+.button:hover{
+	stroke-width:   2;
+}
+
+.plus-minus{
+	fill:			#fff;
+	pointer-events: none;
+}
