Brusco intento de actualizar en tiempo real al grafo, por algun motivo se cancela el drag al actualizarse

--- a/src/resources/css/processView.css
+++ b/src/resources/css/processView.css
@@ -14,7 +14,8 @@ div.tooltip {
     width: 200px;                  
     height: 18px;                 
     padding: 2px;             
-    font: 12px sans-serif;        
+    font: 12px sans-serif;     
+    color: black;   
     background: lightsteelblue;   
     border: 0px;      
     border-radius: 10px;           
