Agregado el css.

--- a/src/resources/css/xterm.css
+++ b/src/resources/css/xterm.css
@@ -109,7 +109,8 @@
 .terminal .xterm-viewport {
     /* On OS X this is required in order for the scroll bar to appear fully opaque */
     /*background-color: #000;*/
-    overflow-y: scroll;
+    /*overflow-y: scroll;*/
+    overflow-y: auto;
 }
 
 .terminal .xterm-rows {
