--- a/src/resources/css/theme/uidark/jquery-ui.theme.css
+++ b/src/resources/css/theme/uidark/jquery-ui.theme.css
@@ -92,8 +92,8 @@
 .ui-state-active,
 .ui-widget-content .ui-state-active,
 .ui-widget-header .ui-state-active {
-	border: 1px solid #ffaf0f;
-	background: #f58400 url("images/ui-bg_inset-soft_30_f58400_1x100.png") 50% 50% repeat-x;
+	border: 1px solid #598EBB;
+	background: #4c82b0;
 	font-weight: bold;
 	color: #ffffff;
 }
