--- a/src/resources/css/jquery-ui.structure.css
+++ b/src/resources/css/jquery-ui.structure.css
@@ -799,7 +799,7 @@ button.ui-button::-moz-focus-inner {
 }
 .ui-tabs .ui-tabs-nav .ui-tabs-anchor {
 	float: left;
-	padding: .5em 1em;
+	padding: .5em .5em;
 	text-decoration: none;
 }
 .ui-tabs .ui-tabs-nav li.ui-tabs-active {
